--- a/smart.html
+++ b/smart.html
@@ -61,30 +61,38 @@
                 <img src="./assets/imgs/smart/Growth.svg">
                 <div class="card-fut">
                     <div class="card-1">
-                        <h4>Advanced distributed<br> ledger technology</h4>
+                        <div>
+                            <h4>Advanced distributed<br> ledger technology</h4>
                         <p>provides high level secure data transfer,<br> asset transfer, real time tracking, machine
                             <br>to
                             machine interactions
                         </p>
+                        </div>
                     </div>
                     <div class="card-1">
-                        <h4>Integrations</h4>
+                        <div>
+                            <h4>Integrations</h4>
                         <p>advanced pipeline integration<br> technologies makes deal or business<br> even better and
                             productive
                             with <br>eliminating the major risks</p>
+                        </div>
                     </div>
                     <div class="card-1">
-                        <h4>Trust</h4>
-                        <p>we bring more trust in global purchase<br> and sales with our supplier and buyer to<br> more
+                        <div>
+                            <h4>Trust</h4>
+                            <p>we bring more trust in global purchase<br> and sales with our supplier and buyer to<br> more
                             transparency with high secure <br>transaction</p>
+                        </div>
                     </div>
                     <div class="card-1">
-                        <h4>Standardization</h4>
+                        <div>
+                            <h4>Standardization</h4>
                         <p>we involves continuous research and <br> development increase the level of standard<br> and
                             security
                             in contracting, procurement, <br>and supply of domestics and internations <br>cross border
                             import
                             and export</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -146,42 +154,66 @@
                 <h1>Gaining benefits our <br>customized smart contracts</h1>
             </div>
             <div class="block_card_gen">
-                <div class="card-3"><img src="./assets/imgs/smart/image 232.svg">
-                    <h3>Accuracy</h3>
-                    <p>smart contract system assures more<br> accuracy in date & time, cost and <br>terms and conditions </p>
+                <div class="card-3">
+                    <div>
+                        <img src="./assets/imgs/smart/image 232.svg">
+                        <h3>Accuracy</h3>
+                        <p>smart contract system assures more<br> accuracy in date & time, cost and <br>terms and conditions </p>
+                    </div>
                 </div>
-                <div class="card-3"><img src="./assets/imgs/smart/image 233.svg">
-                    <h3>Communication</h3>
-                    <p>better communications from all<br> parties transparency to make deal<br> more productively</p>
+                <div class="card-3">
+                    <div>
+                        <img src="./assets/imgs/smart/image 233.svg">
+                        <h3>Communication</h3>
+                        <p>better communications from all<br> parties transparency to make deal<br> more productively</p>    
+                    </div>
                 </div>
-                <div class="card-3"><img src="./assets/imgs/smart/image 234.svg">
-                    <h3>Confidence</h3>
-                    <p>focus the transparency in a system <br>involving parties with reality</p>
+                <div class="card-3">
+                    <div>
+                        <img src="./assets/imgs/smart/image 234.svg">
+                        <h3>Confidence</h3>
+                        <p>focus the transparency in a system <br>involving parties with reality</p>    
+                    </div>
                 </div>
-                <div class="card-3"><img src="./assets/imgs/smart/image 235.svg">
-                    <h3>Efficiency</h3>
-                    <p>more efficiency and speed to initiate<br> the contract or business between the <br>parties with high
-                        standard productive<br> terms of functionality</p>
+                <div class="card-3">
+                    <div>
+                        <img src="./assets/imgs/smart/image 235.svg">
+                        <h3>Efficiency</h3>
+                        <p>more efficiency and speed to initiate<br> the contract or business between the <br>parties with high
+                            standard productive<br> terms of functionality</p>    
+                    </div>
                 </div>
-                <div class="card-3"><img src="./assets/imgs/smart/image 236.svg">
-                    <h3>Transparency</h3>
-                    <p>more transparent in private involving <br>parties to deal progress monitoring <br>and commanding and
-                        advising in <br>real-time</p>
+                <div class="card-3">
+                    <div>
+                        <img src="./assets/imgs/smart/image 236.svg">
+                        <h3>Transparency</h3>
+                        <p>more transparent in private involving <br>parties to deal progress monitoring <br>and commanding and
+                            advising in <br>real-time</p>    
+                    </div>
                 </div>
-                <div class="card-3"><img src="./assets/imgs/smart/image 237.svg">
-                    <h3>Security</h3>
-                    <p>multi layer encrypted security and<br> customized security standards preserve <br>the data transactions
-                        and progress to<br> suppliers and buyers to make risk-free<br> trading and business</p>
+                <div class="card-3">
+                    <div>
+                        <img src="./assets/imgs/smart/image 237.svg">
+                        <h3>Security</h3>
+                        <p>multi layer encrypted security and<br> customized security standards preserve <br>the data transactions
+                            and progress to<br> suppliers and buyers to make risk-free<br> trading and business</p>    
+                    </div>
                 </div>
-                <div class="card-3"><img src="./assets/imgs/smart/image 238.svg">
-                    <h3>Saving:</h3>
-                    <p>mitigate the inventory costs, time <br>from assessing our smart contract<br> platforms, reduce the third
-                        party<br> costs, and technological hiring cost,<br> etc</p>
+                <div class="card-3">
+                    <div>
+                        <img src="./assets/imgs/smart/image 238.svg">
+                        <h3>Saving:</h3>
+                        <p>mitigate the inventory costs, time <br>from assessing our smart contract<br> platforms, reduce the third
+                            party<br> costs, and technological hiring cost,<br> etc</p>    
+                    </div>
                 </div>
-                <div class="card-3"><img src="./assets/imgs/smart/image 239.svg">
-                    <h3>Eco-friendly</h3>
-                    <p>we encouraging more secure next <br>generation paperless transaction and <br>contract. It even reduces
-                        the <br>transactions and document processing <br>time between the parties or <br>countries of business.</p>
+                <div class="card-3">
+                    <div>
+                        <img src="./assets/imgs/smart/image 239.svg">
+                        <h3>Eco-friendly</h3>
+                        <p>we encouraging more secure next <br>generation paperless transaction and <br>contract. It even reduces
+                            the <br>transactions and document processing <br>time between the parties or <br>countries of business.</p>    
+                    </div>
                 </div>
             </div>
         </div>
@@ -189,12 +221,21 @@
     <div class="section-touch">
         <div class="container">
             <div class="sect">
-                <div class="forms">
-
-                </div>
                 <div class="title-img">
-                    <h1>Touch with us more details </h1>
+                    <h1>Touch with us more <br>details </h1>
                     <img src="">
+                </div>
+                <div class="forms">
+                    <form action="#" method="post">
+                        <input type="text" placeholder="Full Name">
+                        
+                        <input type="email" placeholder="Email">
+                        <input type="phone" placeholder="Mobile number">
+                        <input type="text" placeholder="Company name">
+                        <input type="text" placeholder="Ocuupation">
+                        <input type="text" placeholder="Make note or describe about you ">
+    
+                    </form>
                 </div>
             </div>
         </div>
