--- a/smart.html
+++ b/smart.html
@@ -238,9 +238,9 @@
                         </div>
                         <input class="input-2" type="text" placeholder="Company name">
                         <input class="input-2" type="text" placeholder="Ocuupation">
-                        <input class="input-2" type="text" placeholder="Make note or describe about you " id="pl-3">
+                        <textarea class="input-2" placeholder="Make note or describe about you " id="pl-3"></textarea>
+                        <button id="but-3">SUBMIT</button>
                     </form>
-                    <button id="but-3">SUBMIT</button>
                 </div>
                 <div class="block__im">
                     <div class="title-img">
@@ -313,7 +313,7 @@
                         </a>
                     </div>
                     <div class="text-form">
-                        <span><a href="#">Subscribe Us<a></span>
+                        <span><a href="#">Subscribe Us</a></span>
                         <form>
                             <input type="email" id="email" placeholder="Info@yourgmail.com">
                             <div class="but">
