--- a/profile.html
+++ b/profile.html
@@ -5,8 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Профиль пользователя</title>
+    <link rel="stylesheet" href="./assets/styles/profile.css">
 </head>
 <body>
+    <div class="section__header">
+        <div class="container">
+            <div class="header">
+                <div class="menu">
+                    <div class="logo">
+                        <h4>LOGO</h4>
+                        <div class="line">
+                            <div class="line-1"></div>
+                            <div class="line-2"></div>
+                            <div class="line-3"></div>
+                        </div>
+                    </div>
+                    
+                </div>
+                <div class="profile">
     
+                </div>    
+            </div>
+        </div>
+    </div>
 </body>
 </html>
