landing page все....

--- a/index.html
+++ b/index.html
@@ -350,10 +350,178 @@
             <div class="container-fat">
                 <div class="container-blogs">
                     <div class="text-blogs">
-                        
+                        <h2>Blogs</h2>
+                        <p>Research. Intelligence. Reality. Transparency</p>
+
+
+                    </div>
+                    <div class="three_photo">
+                        <div class="photos">
+                            <div class="photo1">
+                                <img src="./assets/imgs/p1.png" alt="photo 1">
+                                <h2 class="zag_photo">Risk Intelligence</h2>
+                                <p class="par_photo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor</p>
+                            </div>
+
+                            <div class="photo2">
+                                <img src="./assets/imgs/p2.png" alt="photo 2">
+                                <h2 class="zag_photo">Risk Intelligence</h2>
+                                <p class="par_photo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor</p>
+                            </div>
+
+                            <div class="photo3">
+                                <img src="./assets/imgs/p3.png" alt="photo 3">
+                                <h2 class="zag_photo">Risk Intelligence</h2>
+                                <p class="par_photo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor</p>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="container-lines">
+                        <hr>
+                        <div class="line_three_photo">
+                            <div class="line_photos">
+                                <div class="line_photo1">
+                                    <img src="./assets/imgs/p1%20small.png" alt="photo 1">
+                                    <div class="tphoto">
+                                        <h2>Risk Intelligence</h2>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
+                                    </div>
+                                    <div class="vertical_line"></div>
+                                </div>
+
+                                <div class="line_photo2">
+                                    <img src="./assets/imgs/p1%20small.png" alt="photo 2">
+                                    <div class="tphoto">
+                                        <h2>Risk Intelligence</h2>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
+
+                                    </div>
+                                    <div class="vertical_line"></div>
+                                </div>
+
+                                <div class="line_photo3">
+                                    <img src="./assets/imgs/p1%20small.png" alt="photo 3">
+                                    <div class="tphoto">
+                                        <h2>Risk Intelligence</h2>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
+
+                                    </div>
+
+                                </div>
+                            </div>
+
+                        </div>
+                        <hr>
                     </div>
                 </div>
             </div>
-</body>
+
+<!--            Subscribe Newsletter-->
+            <div class="container-fat">
+                <div class="container-sub">
+                    <div class="text-sub">
+                        <h2>Subscribe Newsletter</h2>
+                        <p>You need a teacher! I can show you the ways of the Force! The Force. Lieutenant, get back to your station! </p>
+
+                        <div class="block-email">
+                            <div class="email">
+                                <p class="e">Email</p>
+                            </div>
+
+                            <div class="bottom-step">
+                                <p class="white">Connect</p>
+                            </div>
+                        </div>
+
+
+                    </div>
+                    <div class="photo">
+                        <img src="./assets/imgs/Letter.png" alt="letter">
+                    </div>
+
+
+                </div>
+            </div>
+
+<!--            Footer-->
+            <div class="container-fat">
+
+
+            <div class="footer">
+                    <div class="footers">
+                        <div class="text__footer">
+                            <div class="logo-text">
+                                <h1>LOGO</h1>
+                                <p>Lorem ipsum dolor sit amet,consectetur<br>
+                                    adipisicing elit. Quis non, fugit totam vel<br>
+                                    laboriosam vitae.</p>
+                                <div class="social">
+                                    <img src="./assets/imgs/rfq/coolicon-2.svg">
+                                    <img src="./assets/imgs/rfq/coolicon-1.svg">
+                                    <img src="./assets/imgs/rfq/coolicon.svg">
+                                    <img src="./assets/imgs/rfq/Vector.svg">
+                                </div>
+                            </div>
+                            <div class="acc">
+                                <span><a href="#">My Account</a></span>
+                                <a href="#">
+                                    <p>Authors</p>
+                                </a>
+                                <a href="#">
+                                    <p>Collection</p>
+                                </a>
+                                <a href="#">
+                                    <p>Author Profile</p>
+                                </a>
+                                <a href="#">
+                                    <p>Create Collection</p>
+                                </a>
+                            </div>
+                            <div class="res">
+                                <span><a href="#">Resources</a></span>
+                                <a href="#">
+                                    <p>Help & Support</p>
+                                </a>
+                                <a href="#">
+                                    <p>Live Auctions</p>
+                                </a>
+                                <a href="#">
+                                    <p>Item Details</p>
+                                </a>
+                                <a href="#">
+                                    <p>Activity</p>
+                                </a>
+                            </div>
+                            <div class="comm">
+                                <span><a href="#">Communties</a></span>
+                                <a href="#">
+                                    <p>About Us</p>
+                                </a>
+                                <a href="#">
+                                    <p>Contact Us</p>
+                                </a>
+                                <a href="#">
+                                    <p>Our Blog</p>
+                                </a>
+                                <a href="#">
+                                    <p>Discover</p>
+                                </a>
+                            </div>
+                            <div class="text-form">
+                                <span><a href="#">Subscribe Us<a></span>
+                                <form>
+                                    <input type="email" id="email" placeholder="Info@yourgmail.com">
+                                    <div class="but">
+                                        <img src="./assets/imgs/rfq/Primary fill.svg">
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </body>
 
 </html>
