--- a/index.html
+++ b/index.html
@@ -65,42 +65,42 @@
                 <p class="title">Anything to anyone from anywhere</p>
                 <p class="opis">Get inspired while business with us</p>
                 <div class="line">
-                    <img src="/assets/imgs/line.png" alt="line">
+                    <img src="./assets/imgs/line.png" alt="line">
                 </div>
             </div>
             <div class="pictures">
                 <div class="picture ptext">
-                    <img src="/assets/imgs/image 208.png" alt="lupa">
+                    <img src="./assets/imgs/image 208.png" alt="lupa">
                     <h2>Risk Intelligence</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolor</p>
                 </div>
                 <div class="picture ptext">
-                    <img src="/assets/imgs/image 209.png" alt="oblako">
+                    <img src="./assets/imgs/image 209.png" alt="oblako">
                     <h2>Big data analytics</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolor</p>
                 </div>
                 <div class="picture ptext">
-                    <img src="/assets/imgs/image 210.png" alt="papka">
+                    <img src="./assets/imgs/image 210.png" alt="papka">
                     <h2>Sourcing Intelligence</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolor</p>
                 </div>
                 <div class="picture ptext">
-                    <img src="/assets/imgs/image 211.png" alt="lampa">
+                    <img src="./assets/imgs/image 211.png" alt="lampa">
                     <h2>Smart procurement</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolor</p>
                 </div>
                 <div class="picture ptext">
-                    <img src="/assets/imgs/image 212.png" alt="robot">
+                    <img src="./assets/imgs/image 212.png" alt="robot">
                     <h2>Technological supports</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolor</p>
                 </div>
                 <div class="picture ptext">
-                    <img src="/assets/imgs/image 213.png" alt="mir">
+                    <img src="./assets/imgs/image 213.png" alt="mir">
                     <h2>C-Smart Marketing</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolor</p>
